style.css
body {
    display: grid;
    margin: auto;
    grid-template-columns: repeat(1, auto);
    grid-template-rows: 80px auto 300px;
}
.logodiv {
    display: contents;
}
.logo {
    max-width: 200px;
    min-width: 100px;
    position: absolute;      
}

.logo-container {
    display: flex;
    justify-content: flex-end;
    grid-column: 3/4;
    padding-right: 10%;
}

article {   
    font-family: 'Playfair Display', serif;
    font-size: 10px;
    padding-right: 10%;
    align-self: center;
    grid-column-end: none;
    grid-row: 2;
    grid-column: 3;
    
}

span {
    font-size: 20px;
    color: darkseagreen;
}

nav {
    
    grid-row: 3/4;
    justify-content: space-evenly;

}

.nav-element {
    font-size: 15px;
    color: #80808096;
    font-family: 'Barlow', sans-serif;
    outline-width: 1px;
    outline-style: auto;
    text-align: right;
    padding-right: 10%;
    
}

.imgcontainer {
    display: flex;
    align-items: baseline;
    grid-column: 1/3;
    grid-row: 3/4;
}


.inline {
    object-fit: contain;
    padding-left: 50px;
    padding-right: 0;
    padding-top: 50px;
    padding-bottom: 0;
}
.black {
    height: auto;
    width: 100%;
    max-width: 185px;
    min-width: 45px;  
}

.blue {
    height: auto;
    width: 100%;
    max-width: 165px;
    min-width: 45px; 
}

.gin {
    height: auto;
    width: 100%;
    max-width: 200px;
    min-width: 50px;
}

@media (max-width: 500px) {
    body {
        margin-top: 80px;
        display: flex;
        flex-direction: column;
    }
    
    .logo-container {
      justify-content: center;
      flex-direction: column;
      padding-right: 10px;
    }

    .imgcontainer {
      justify-content: center;
      flex-direction: row;
    }

    article {
        justify-content: center;
        flex-direction: row;
        text-align: center;
        padding-top: 80px;
        padding-right: 0;
    }

    .inline {
    inline-size: min-content;
    padding-right: 20px;
    }
}

